--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,12 @@
 @import "tailwindcss";
+
+html {
+  height: 100%;
+  line-height: 1.2;
+}
+
+body { margin: 0 }
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
